#11316: fixed full calendar layout issue for upcoming and past events

--- a/profile/themes/os_base/scss/component/_calendar.scss
+++ b/profile/themes/os_base/scss/component/_calendar.scss
@@ -133,6 +133,12 @@ aside {
       }
     }
   }
+  .field--name-field-location, .field--name-field-recurring-date {
+    display: flex;
+    .field--label {
+      margin-right: 4px;
+    }
+  }
 }
 /**** code for day event ****/
 .fc-listUpcoming-view, .fc-listWeek-view, .fc-listDay-view, .fc-listPast-view {
@@ -146,6 +152,49 @@ aside {
     a {
       background: none;
       border: 0 none;
+    }
+  }
+}
+
+/**** code for upcoming/past events ****/
+.fc-listUpcoming-view, .fc-listPast-view  {
+  border: 0;
+  .fc-scroller {
+    height: auto !important;
+  }
+  tbody {
+    display: flex;
+    flex-wrap: wrap;
+    .fc-list-heading {
+      display: flex;
+      flex: 0 0 10%;
+      .ui-widget-header {
+        background: none;
+        border: 0 none;
+      }
+    }
+    .fc-list-item-parent {
+      display: flex;
+      flex: 1 1 90%;
+      flex-wrap: wrap;
+      flex-direction: column;
+      .content {
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+        border-bottom: 1px solid $color-light-gray;
+      }
+    }
+  }
+}
+
+/**** modal body ****/
+.modal-body {
+  .events.full {
+    .field--name-field-location, .field--name-field-recurring-date {
+      display: flex;
+      .field--label {
+        margin-right: 4px;
+      }
     }
   }
 }
